--- a/HR-Monitor/src/View/login.fxml
+++ b/HR-Monitor/src/View/login.fxml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Bloom?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<Pane fx:id="pane" cache="true" cacheHint="SPEED" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: #202c47;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:id="pane" cache="true" cacheHint="SPEED" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: #202c47;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <Button id="loginButton" fx:id="login" layoutX="348.0" layoutY="301.0" mnemonicParsing="false" onAction="#onLogin" prefHeight="33.0" prefWidth="135.0" style="-fx-border-color: #ecf0f1; -fx-background-color: #222D41;" text="Login" textFill="#ecf0f1" />
 
@@ -49,6 +44,11 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
+        <ImageView fx:id="languageChangeFX" fitWidth="30.0" layoutX="542.0" layoutY="407.0" preserveRatio="true" smooth="true">
+            <image>
+                <Image url="@../Style/German.gif" />
+            </image>
+        </ImageView>
 
 
     </children>
