--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -177,7 +177,7 @@
                                  <Font name="System Bold" size="12.0" />
                               </font>
                            </Label>
-                           <Label fx:id="lblStatusFX" alignment="CENTER" minWidth="75.0" prefHeight="17.0" prefWidth="34.0" style="-fx-background-color: transparent; -fx-background-radius: 10 10 10 10;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                           <Label fx:id="lblStatusFX" alignment="CENTER" minWidth="100.0" prefHeight="17.0" prefWidth="34.0" style="-fx-background-color: transparent; -fx-background-radius: 10 10 10 10;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
                      </children>
                   </GridPane>
@@ -376,10 +376,10 @@
                                     <VBox maxHeight="3000.0" minHeight="100.0">
                                           <HBox fx:id="hBoxBChartFX" alignment="CENTER" maxHeight="5000.0" prefHeight="344.0" prefWidth="1000.0" />
                                        <HBox alignment="CENTER" maxHeight="500.0" spacing="20.0">
-                                          <Label> Change status</Label>
-                                          <Label fx:id="btnOFX" minWidth="75.0" style="-fx-alignment: CENTER;-fx-background-color: #61d0ee; -fx-background-radius:10 10 10 10" text="Open"> Open</Label>
-                                          <Label fx:id="btnHRFX" minWidth="75.0" style="-fx-alignment: CENTER;-fx-background-color: #5be14f; -fx-background-radius:10 10 10 10"> Send to HR</Label>
-                                          <Label fx:id="btnDFX" minWidth="75.0" style="-fx-alignment: CENTER;-fx-background-color: #ff927e; -fx-background-radius:10 10 10 10"> Denied</Label>
+                                          <Label fx:id="changeStatusFX" text="Change status"> Change status</Label>
+                                          <Label fx:id="btnOFX" minWidth="80.0" style="-fx-alignment: CENTER;-fx-background-color: #61d0ee; -fx-background-radius:10 10 10 10" text="Open"> Open</Label>
+                                          <Label fx:id="btnHRFX" minWidth="110.0" style="-fx-alignment: CENTER;-fx-background-color: #5be14f; -fx-background-radius:10 10 10 10"> Send to HR</Label>
+                                          <Label fx:id="btnDFX" minWidth="85.0" style="-fx-alignment: CENTER;-fx-background-color: #ff927e; -fx-background-radius:10 10 10 10"> Denied</Label>
                                              <opaqueInsets>
                                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                              </opaqueInsets>
@@ -388,11 +388,11 @@
                                              </padding>
                                        </HBox>
                                     </VBox>
-                                    <TitledPane collapsible="false" maxHeight="1000.0" minHeight="100.0" prefHeight="200.0" text="Comments by the Fairteam Member" wrapText="true">
+                                    <TitledPane fx:id="commentFTMem" collapsible="false" maxHeight="1000.0" minHeight="100.0" prefHeight="200.0" text="Comments by the Fairteam Member" wrapText="true">
                                           <content>
                                              <TextField fx:id="txtImpFX" alignment="TOP_LEFT" editable="false" maxHeight="1000.0" prefHeight="135.0" prefWidth="648.0" />
                                           </content></TitledPane>
-                                    <TitledPane collapsible="false" maxHeight="1000.0" minHeight="100.0" prefHeight="200.0" text="Comments by the HR Member" wrapText="true">
+                                    <TitledPane fx:id="commentHRMem" collapsible="false" maxHeight="1000.0" minHeight="100.0" prefHeight="200.0" text="Comments by the HR Member" wrapText="true">
                                           <content>
                                              <TextField fx:id="txtImpHRFX" alignment="TOP_LEFT" maxHeight="1000.0" prefHeight="115.0" prefWidth="648.0" promptText="Add a comment about the Applicant" />
                                           </content></TitledPane>
