--- a/HR-Monitor/src/View/standard.fxml
+++ b/HR-Monitor/src/View/standard.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="566.0" prefHeight="493.0" prefWidth="884.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="900.0" prefHeight="493.0" prefWidth="921.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <left>
         <BorderPane maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="150.0" BorderPane.alignment="CENTER">
             <top>
@@ -43,7 +43,7 @@
         </BorderPane>
     </left>
     <center>
-        <BorderPane fx:id="borderPaneCurrentView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="32.0" prefHeight="400.0" prefWidth="665.0" style="-fx-background-color: gainsboro;" BorderPane.alignment="CENTER" />
+        <BorderPane fx:id="borderPaneCurrentView" maxHeight="1.7976931348623157E308" minWidth="500.0" prefHeight="493.0" prefWidth="914.0" style="-fx-background-color: gainsboro;" BorderPane.alignment="CENTER" />
     </center>
     <bottom>
         <BorderPane style="-fx-background-color: #eeeeee;" BorderPane.alignment="CENTER">
