Deleting Local Variable, fixed bug

--- a/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
+++ b/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
@@ -1,7 +1,12 @@
 <div class="main-description">
   <h1>{{ 'profilePicture.title' | translate }}</h1>
 </div>
-<div *ngIf="!hasPicture; else elseBlock">
+<div
+  *ngIf="
+    this.formsData.controls.profilePicture.controls.pictureBase64.value === '';
+    else elseBlock
+  "
+>
   <span class="description">
     {{ 'profilePicture.stepDescription' | translate }}
   </span>
