--- a/HR-Monitor/src/View/storageView.fxml
+++ b/HR-Monitor/src/View/storageView.fxml
@@ -37,16 +37,16 @@
    <top>
       <GridPane alignment="CENTER" minWidth="600.0" BorderPane.alignment="CENTER">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="37.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="40.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="273.0" minWidth="10.0" prefWidth="66.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="382.0" minWidth="10.0" prefWidth="120.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="343.0" minWidth="0.0" prefWidth="70.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="343.0" minWidth="10.0" prefWidth="119.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="86.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="151.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="75.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="382.0" minWidth="10.0" prefWidth="149.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="0.0" prefWidth="70.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="343.0" minWidth="10.0" prefWidth="150.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="70.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="150.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="70.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="455.0" minWidth="10.0" prefWidth="171.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="455.0" minWidth="10.0" prefWidth="42.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="455.0" minWidth="10.0" prefWidth="40.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="13.0" vgrow="SOMETIMES" />
@@ -55,21 +55,20 @@
         </rowConstraints>
          <children>
             <Label fx:id="lblName" alignment="CENTER" prefHeight="17.0" prefWidth="209.0" text="Name" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <TextField fx:id="txtNameFX" prefHeight="25.0" prefWidth="205.0" promptText="First name or Last Name" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <MenuButton fx:id="mBtnStatusFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="122.0" text="Status" GridPane.columnIndex="4" GridPane.rowIndex="1">
+            <TextField fx:id="txtNameFX" maxWidth="200.0" prefHeight="25.0" prefWidth="205.0" promptText="First name or Last Name" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <MenuButton fx:id="mBtnStatusFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Status" GridPane.columnIndex="4" GridPane.rowIndex="1">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
               </items>
             </MenuButton>
-            <MenuButton fx:id="mBtnIndustryFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="113.0" text="Industry" GridPane.columnIndex="6" GridPane.rowIndex="1">
+            <MenuButton fx:id="mBtnIndustryFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Industry" GridPane.columnIndex="6" GridPane.rowIndex="1">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
               </items>
             </MenuButton>
-            <MenuButton fx:id="mBtnPositionFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="121.0" text="Position" GridPane.columnIndex="8" GridPane.rowIndex="1">
+            <MenuButton fx:id="mBtnPositionFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Position" GridPane.columnIndex="8" GridPane.rowIndex="1">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
