--- a/HR-Monitor/src/View/storageView.fxml
+++ b/HR-Monitor/src/View/storageView.fxml
@@ -25,7 +25,7 @@
                     <columns>
                         <TableColumn fx:id="firstNameCol" minWidth="-1.0" prefWidth="204.0" style="-fx-alignment: CENTER;" />
                         <TableColumn fx:id="lastNameCol" prefWidth="79.0" style="-fx-alignment: CENTER;" text="Last Name" />
-                  <TableColumn fx:id="status" prefWidth="75.0" style="-fx-alignment: CENTER;" text="Status" />
+                        <TableColumn fx:id="status" prefWidth="75.0" style="-fx-alignment: CENTER;" text="Status" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -37,16 +37,16 @@
    <top>
       <GridPane alignment="CENTER" minWidth="600.0" BorderPane.alignment="CENTER">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="40.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="273.0" minWidth="10.0" prefWidth="66.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="382.0" minWidth="10.0" prefWidth="149.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="0.0" prefWidth="70.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="343.0" minWidth="10.0" prefWidth="150.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="70.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="150.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="70.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="35.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="273.0" minWidth="10.0" prefWidth="44.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="382.0" minWidth="10.0" prefWidth="174.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="343.0" minWidth="0.0" prefWidth="60.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="343.0" minWidth="10.0" prefWidth="147.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="60.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="151.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="60.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="455.0" minWidth="10.0" prefWidth="171.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="455.0" minWidth="10.0" prefWidth="40.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="455.0" minWidth="10.0" prefWidth="42.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="13.0" vgrow="SOMETIMES" />
@@ -55,7 +55,7 @@
         </rowConstraints>
          <children>
             <Label fx:id="lblName" alignment="CENTER" prefHeight="17.0" prefWidth="209.0" text="Name" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="txtNameFX" maxWidth="200.0" prefHeight="25.0" prefWidth="205.0" promptText="First name or Last Name" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <TextField fx:id="txtNameFX" prefHeight="25.0" prefWidth="200.0" promptText="First name or Last Name" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <MenuButton fx:id="mBtnStatusFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Status" GridPane.columnIndex="4" GridPane.rowIndex="1">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
