--- a/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
+++ b/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
@@ -3,18 +3,10 @@
 </div>
 <div
   *ngIf="
-    this.formsData.controls.profilePicture.controls.pictureBase64.value === '';
+    this.formsData.controls.profilePicture.controls.pictureBase64.value;
     else elseBlock
   "
 >
-  <span class="description">
-    {{ 'profilePicture.stepDescription' | translate }}
-  </span>
-  <button (click)="takePicture()" class="custom-button">
-    <ion-icon name="person"></ion-icon>
-  </button>
-</div>
-<ng-template #elseBlock>
   <span class="description">
     {{ 'profilePicture.deleteTakeAnotherPictureMessage' | translate }}
   </span>
@@ -26,5 +18,13 @@
   </ion-item>
   <button (click)="deletePictureEntry()" class="trash-button">
     <ion-icon name="trash-outline" class="trash-icon"></ion-icon>
+  </button>
+</div>
+<ng-template #elseBlock>
+  <span class="description">
+    {{ 'profilePicture.stepDescription' | translate }}
+  </span>
+  <button (click)="takePicture()" class="custom-button">
+    <ion-icon name="person"></ion-icon>
   </button>
 </ng-template>
