GUI and translation fixes

--- a/HR-Monitor/src/View/storageView.fxml
+++ b/HR-Monitor/src/View/storageView.fxml
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="746.0" prefWidth="945.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="746.0" prefWidth="945.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <GridPane alignment="CENTER" prefHeight="656.0" prefWidth="831.0" style="-fx-background-color: #ecf0f1;" BorderPane.alignment="TOP_LEFT">
         <columnConstraints>
@@ -37,7 +29,6 @@
    <top>
       <GridPane alignment="CENTER" minWidth="600.0" BorderPane.alignment="CENTER">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="35.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="273.0" minWidth="10.0" prefWidth="44.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="382.0" minWidth="10.0" prefWidth="174.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="343.0" minWidth="0.0" prefWidth="60.0" />
@@ -54,21 +45,20 @@
             <RowConstraints maxHeight="10.0" minHeight="9.0" prefHeight="18.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="lblName" alignment="CENTER" prefHeight="17.0" prefWidth="209.0" text="Name" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="txtNameFX" prefHeight="25.0" prefWidth="200.0" promptText="First name or Last Name" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <MenuButton fx:id="mBtnStatusFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Status" GridPane.columnIndex="4" GridPane.rowIndex="1">
+            <TextField fx:id="txtNameFX" maxWidth="250.0" prefHeight="25.0" prefWidth="167.0" promptText="First name or Last Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <MenuButton fx:id="mBtnStatusFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Status" GridPane.columnIndex="3" GridPane.rowIndex="1">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
               </items>
             </MenuButton>
-            <MenuButton fx:id="mBtnIndustryFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Industry" GridPane.columnIndex="6" GridPane.rowIndex="1">
+            <MenuButton fx:id="mBtnIndustryFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Industry" GridPane.columnIndex="5" GridPane.rowIndex="1">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
               </items>
             </MenuButton>
-            <MenuButton fx:id="mBtnPositionFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Position" GridPane.columnIndex="8" GridPane.rowIndex="1">
+            <MenuButton fx:id="mBtnPositionFX" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Position" GridPane.columnIndex="7" GridPane.rowIndex="1">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
