save changes notification

--- a/HR-Monitor/src/View/applicantInfo.fxml
+++ b/HR-Monitor/src/View/applicantInfo.fxml
@@ -398,7 +398,12 @@
                                           </content></TitledPane>
                                        <HBox alignment="CENTER" maxHeight="5000.0" prefHeight="35.0" prefWidth="650.0">
                                           <children>
-                                             <Button fx:id="btnSaveFX" mnemonicParsing="false" text="Save Changes" />
+                                             <Button fx:id="btnSaveFX" mnemonicParsing="false" text="Save Changes" translateX="125.0" />
+                                             <Label id="successLabel" fx:id="successLabelFX" alignment="BASELINE_RIGHT" layoutX="10.0" minWidth="320.0" prefHeight="26.0" prefWidth="0.0" textAlignment="JUSTIFY" translateX="125.0" visible="false">
+                                                <font>
+                                                   <Font name="Apple LiSung Light" size="18.0" />
+                                                </font>
+                                             </Label>
                                           </children></HBox>
                                  </items>
                               </SplitPane>
