--- a/frontend/src/app/privacy/details/details.page.html
+++ b/frontend/src/app/privacy/details/details.page.html
@@ -12,7 +12,7 @@
 <ion-content>
   <div class="main-container">
     <div class="description">
-      {{'privacyPage.dummyText' | translate}}
+      <div [innerHTML]="'policyDetailsPage.point1' |translate"></div>
     </div>
   </div>
 </ion-content>
