--- a/frontend/src/app/privacy/details/details.page.html
+++ b/frontend/src/app/privacy/details/details.page.html
@@ -13,6 +13,7 @@
   <div class="main-container">
     <div class="description">
       <div [innerHTML]="'policyDetailsPage.point1' |translate"></div>
+      <div [innerHTML]="'policyDetailsPage.point2' |translate"></div>
     </div>
   </div>
 </ion-content>
