Privacy policy point 3 added

--- a/frontend/src/app/privacy/details/details.page.html
+++ b/frontend/src/app/privacy/details/details.page.html
@@ -14,6 +14,7 @@
     <div class="description">
       <div [innerHTML]="'policyDetailsPage.point1' |translate"></div>
       <div [innerHTML]="'policyDetailsPage.point2' |translate"></div>
+      <div [innerHTML]="'policyDetailsPage.point3' |translate"></div>
     </div>
   </div>
 </ion-content>
