Privacy policy point 4 added

--- a/frontend/src/app/privacy/details/details.page.html
+++ b/frontend/src/app/privacy/details/details.page.html
@@ -15,6 +15,7 @@
       <div [innerHTML]="'policyDetailsPage.point1' |translate"></div>
       <div [innerHTML]="'policyDetailsPage.point2' |translate"></div>
       <div [innerHTML]="'policyDetailsPage.point3' |translate"></div>
+      <div [innerHTML]="'policyDetailsPage.point4' |translate"></div>
     </div>
   </div>
 </ion-content>
