--- a/frontend/src/theme/custom.scss
+++ b/frontend/src/theme/custom.scss
@@ -210,18 +210,25 @@ ion-content.without-ion-header {
 .main-heading {
   font-size: 30px;
   font-weight: 500;
+  margin-top: 20px;
+  text-align: justify;
 }
 .sub-heading {
   font-size: 25px;
   font-weight: 450;
+  margin-top: 10px;
+  text-align: justify;
 }
 .sub-topic {
   font-size: 20px;
   font-weight: 400;
+  margin-top: 10px;
+  text-align: justify;
 }
 .topic-content {
   font-size: 18px;
   font-weight: 300;
+  margin-top: 10px;
   text-align: justify;
 }
 
