Bug Fix of missing check in sidemenu for work experience page

--- a/frontend/src/app/forms/side-menu/side-menu.component.html
+++ b/frontend/src/app/forms/side-menu/side-menu.component.html
@@ -61,6 +61,7 @@
             step: APPLICATION_STEP.WorkExperience,
             displayName: displayNames.workExperience,
             isValid: formsData.controls.workExperienceInfo.valid,
+            isDisabled: formsData.controls.workExperienceInfo.disabled,
             isActive: currentStep === APPLICATION_STEP.WorkExperience
           }"
         ></ng-container>
